@@ -1,6 +1,6 @@
 .. _2.0:
 
-GammaLib 2.0 release (23 April 2021)
+GammaLib 2.0 release (30 April 2021)
 ====================================
 
 Overview
@@ -35,8 +35,8 @@ Improvements
 
 * [`3630 <https://cta-redmine.irap.omp.eu/issues/3630>`_] -
   Add ASCL shield to **About** page
-* [`3386 <https://cta-redmine.irap.omp.eu/issues/3386>`_] -
-  Support spectral line fitting
+* [`3626 <https://cta-redmine.irap.omp.eu/issues/3626>`_] -
+  Add ``GModelSpectralFunc`` spectral constructor
 * [`3592 <https://cta-redmine.irap.omp.eu/issues/3592>`_] -
   Add carbon footprint estimation to ``GApplication``
 * [`3564 <https://cta-redmine.irap.omp.eu/issues/3564>`_] -
@@ -58,6 +58,8 @@ Improvements
   Add GModelSpectralFunc methods to build file function in memory
 * [`3501 <https://cta-redmine.irap.omp.eu/issues/3501>`_] -
   Implement vectorised response computation for COMPTEL
+* [`3386 <https://cta-redmine.irap.omp.eu/issues/3386>`_] -
+  Support spectral line fitting
 * [`3333 <https://cta-redmine.irap.omp.eu/issues/3333>`_] -
   Integrate analytical gradients for energy dispersion computation
 * [`3324 <https://cta-redmine.irap.omp.eu/issues/3324>`_] -
