@@ -39,6 +39,7 @@
 /* __ Forward declarations _______________________________________________ */
 class GRan;
 class GTime;
+class GEnergies;
 class GXmlElement;
 
 
@@ -63,6 +64,7 @@ public:
     // Constructors and destructors
     GModelSpectralFunc(void);
     GModelSpectralFunc(const GFilename& filename, const double& norm);
+    GModelSpectralFunc(const GModelSpectral& model, const GEnergies& energies);
     explicit GModelSpectralFunc(const GXmlElement& xml);
     GModelSpectralFunc(const GModelSpectralFunc& model);
     virtual ~GModelSpectralFunc(void);
@@ -132,7 +134,7 @@ protected:
     mutable std::vector<double> m_epivot;    //!< Power-law pivot energies
     mutable std::vector<double> m_flux;      //!< Photon fluxes
     mutable std::vector<double> m_eflux;     //!< Energy fluxes
-    
+
     // Cached members for MC
     mutable GEnergy             m_mc_emin;   //!< Minimum energy
     mutable GEnergy             m_mc_emax;   //!< Maximum energy
